--- a/mul.ipynb
+++ b/mul.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a24d5eeb",
+   "execution_count": 1,
+   "id": "c9b4b163",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 56\n"
+     ]
+    }
+   ],
    "source": [
     "def mul(a,b):\n",
     "    return a*b\n",
     "result=mul(8,7)\n",
     "print(\"Result:\",result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af4cb80c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
